src/objects/Actual_Sales_Dates__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Contains fields for managing Start &amp; End for Actual Sales Reporting</description>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Month_Start_Date__c</fullName>
        <label>Month Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Year_Start_Date__c</fullName>
        <label>Year Start Date</label>
        <type>Date</type>
    </fields>
    <label>Actual Sales Dates</label>
</CustomObject>